[metadata]
name = uprotocol-tck
author = Patrick Yang
author_email = patrick.yang@gm.com
description = UProtocol Python TCK
version = 1
keywords =
  uprotocol
  python

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  behave >= 1.2.6
  behave-html-formatter
  cloudevents
  GitPython
  multipledispatch
  psutil
  PyHamcrest
  up-python==0.1.1-dev0