[metadata]
name = uprotocol-tck
author = Patrick Yang
author_email = patrick.yang@gm.com
description = UProtocol Python TCK
version = 1
keywords =
  uprotocol
  python

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  cloudevents
;   googleapis-common-protos>=1.56.4