################################################################################
# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################
[package]
name = "rust_tck"
version = "0.1.0"
edition = "2021"
exclude = [
    "tests/*",
    "tools/*",
    ".devcontainer/*",
    ".vscode/*",
    ".github/*",
    ".gitignore",
]

[[bin]]
name = "rust_tck"

[lints.clippy]
all = "deny"
pedantic = "deny"

[dependencies]
anyhow = "1.0.75"
async-std = "1.12.0"
async-trait = "0.1"
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.17"
prost = "0.12"
prost-types = "0.12"
protobuf = { version = "3.3" }
utransport-socket = {path = "../../up_client_socket/rust/utransport-socket"}
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "c705ac97602ad6917a93d23651e8a504ec7bb718"}
up-client-zenoh = {git ="https://github.com/eclipse-uprotocol/up-client-zenoh-rust.git", rev = "dc0a3a95564ab1c83771fe71f0da5a261d469fb6"}
zenoh = { version = "0.10.1-rc", features = ["unstable"]}
base64 = { version = "0.22.0"}
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.8.0" 
tokio = { version = "1", features = ["full"] }
anystruct = "0.1.0"
json2pb="*"
protobuf-json-mapping = "3.4.0"
serde_json = "1.0"
uuid = "1.8.0"
rand = "0.8.4"
clap = { version = "4.5.4", features = ["derive"] }


#prost-json = "0.8"
[features]
debug_print = []


